# PCO-exs

./: .gitignore  flake.nix
_exemples/increment/: CMakeLists.txt  increment.pro  main.cpp
ex10/: mutexfromsem.h  mutexfromsemaphore_tests
ex11/: main.cpp  pcobarrier.h
ex12/: bridgemanagermonitor.h
ex12_1/: bridgemanager.h  bridgesimple_tests
ex12_2/: bridgemanager.h  bridgesimple_tests
ex12_3/: CMakeLists.txt  bridgemanager.h  bridgesimple_tests
ex13/: bridgemanagerfloat.h
ex13_1/: bridgefloat_tests  bridgemanagerfloat.h
ex13_2/: bridgemanagerfloat.h
ex13_3/: bridgefloat_tests  bridgemanagerfloat.h  main.cpp
ex14_1/: bridgemanagerfloat.h
ex15/: buffer2conso.h  producerconsumersimple2_tests
ex16/: CMakeLists.txt  buffer2conso.h  producerconsumermultiple2_tests
ex17/: semaphorefrommonitor.h
ex18_3/: CMakeLists.txt  loader.h  preloader_tests
ex19/: lectred_toilettes_tests  main.cpp  toilets.h
ex20_1/: lectred_priored_tests  readerwriterpriowritergeneral.h
ex20_2/: lectred_priored_tests  readerwriterpriowritergeneral.h
ex20_3/: lectred_priored_tests  readerwriterpriowritergeneral.h
ex21_1/: readerwriterclassab.h
ex2_te23-24/: CMakeLists.txt  RacletteTIC  main.cpp
ex6/: CMakeLists.txt  main.cpp
ex7/: CMakeLists.txt  main.cpp
ex_memorytests/: main.cpp
